# orpheusdl-tidal

./: .gitignore  .gitmodules  README.md  interface.py  pyproject.toml  tidal_api.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: close_inactive_issues.yml
modules/tidal/: interface.py  tidal_api.py
mqa_identifier_python/: flac.py  mqa_identifier.py  readme.md
orpheusdl_module_tidal/: interface.py  tidal_api.py
